# enterprise-sdk-utils-python

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  fortify.yml  pr-checks.yml  publish.yml
src/fds/sdk/utils/: __init__.py
src/fds/sdk/utils/authentication/: __init__.py  confidential.py  constants.py  exceptions.py  oauth2client.py
tests/fds/sdk/utils/authentication/: test_confidential.py  test_oauth2client.py
