[project]
name = "fds.sdk.utils"
version = "2.1.0"
description = "Utilities for interacting with FactSet APIs."
authors = [{ name = "FactSet Research Systems" }]
requires-python = ">=3.8.0,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
  "FactSet",
  "API",
  "SDK",
]
dependencies = [
  "requests-oauthlib>=2.0.0,<3",
  "requests>=2.32.3,<3",
  "oauthlib>=3.2.2,<4",
  "joserfc>=1.1.0,<2",
]

[project.urls]
Homepage = "https://developer.factset.com"

[dependency-groups]
dev = [
  "black>=24.8.0,<25",
  "pytest>=8.3.5,<9",
  "pytest-cov>=5.0.0,<6",
  "pytest-mock>=3.14.1,<4"
]

[tool.hatch.build.targets.sdist]
include = ["src/fds"]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
include = ["src/fds"]
exclude = ["tests"]

[tool.hatch.build.targets.wheel.sources]
"src/fds" = "fds"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=fds --cov-report xml"
