[tool.poetry]
name = "fds.sdk.utils"
version = "3.0.0"
description = "Utilities for interacting with FactSet APIs."
authors = ["FactSet Research Systems"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://developer.factset.com"
keywords = [
  "FactSet",
  "API",
  "SDK"
]
packages = [
  { include = "fds", from = "src" }
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
requests-oauthlib = "^2.0.0"
requests = "^2.33.0"
oauthlib = "^3.2.2"
joserfc = ">=1.6.3,<2.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.3"
black = "^26.5.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
tox = "^4.53.1"
tox-gh-actions = "^3.5.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
